--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,11 +45,54 @@
     font-family: var(--fuenteSecundaria);
     font-size: 2.5rem;
 }
-.menu__list{
+.menu__list{ /*MENU DESPLEGABLE*/
+    position: absolute;
     margin-right: 2rem;
+    padding: 1rem 0;
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 3.5rem;
     font-size:1.5rem;
+    transition: transform 0.3s;
+    transform: translateX(-100%);
+    background-color: var(--colorAux2);
+    top:8rem;
+    text-align: center;
+}
+.menu__list--show{  
+    transform: translateX(0);
+}
+.menu__link{
+    border-bottom: 1px solid var(--oscuro);
+    width: 90%;
+}
+@media (min-width: 768px) {
+    .menu__list{
+        position: initial;
+        background-color: initial;
+        flex-direction: row;
+        transform: translateX(0);
+        border: none;
+    }
+    .menu__link{
+        border: none;
+        width: initial;
+    }
+}
+.toggle-menu{
+    position: absolute;
+    top:2.5rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--colorSecundario);
+}
+@media (min-width: 768px) {
+    .toggle-menu{
+        display: none;
+    }
 }
 .menu__link:hover{
     text-decoration: underline;
@@ -121,14 +164,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:2.5rem;
+    gap:3rem;
 }
 .menu__img-container{
-    width: 18rem;
+    width: 16rem;
+    height: 16rem;
 }
 .menu__img{
     width: 100%;
-    height: 16rem;
+    height: inherit;
 }
 .menu__item-name{
     font-size: 1.6rem;
