Detalles de link yheader

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,12 @@
 }
 /*ESTILOS LOGO*/
 .header__logo-container{
-    width: 8rem;
+    width: 4rem;
+}
+@media (min-width: 768px) {
+    .header__logo-container{
+        width: 8rem;
+    }
 }
 .header__logo-img{
     width: 100%;
@@ -40,25 +45,25 @@
 /*FRASE*/
 .header__phrase{
     position: absolute;
-    top:2.5rem;
-    left: 7rem;
+    top:1rem;
+    left:3.5rem;
     font-family: var(--fuenteSecundaria);
-    font-size: 2.5rem;
+    font-size: 1.5rem;
 }
 .menu__list{ /*MENU DESPLEGABLE*/
     position: fixed;
     margin-right: 2rem;
     padding: 1rem 0;
-    width: 90%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 3.5rem;
-    font-size:1.5rem;
+    font-size:1rem;
     transition: transform 0.5s;
     transform: translate(-100%);
     background-color: var(--colorPrincipal);
-    top:8rem;
+    top:4rem;
     text-align: center;
     border-bottom-left-radius: 1rem;
 }
@@ -68,6 +73,9 @@
 .menu__link{
     border-bottom: 1px solid var(--oscuro);
     width: 90%;
+}
+.menu__link:last-of-type{
+    border: none;
 }
 @media (min-width: 768px) {
     .menu__list{
@@ -84,9 +92,9 @@
 }
 .toggle-menu{
     position: absolute;
-    top:2.5rem;
+    top:1rem;
     right: 1.5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     cursor: pointer;
     color: var(--colorSecundario);
 }
